--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   rxdart: ^0.28.0
   easy_localization: ^3.0.0
   flutter_phoenix: ^1.0.0
+  loading_animation_widget: ^1.3.0
 
 
 dev_dependencies:
