--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   easy_localization: ^3.0.0
   flutter_phoenix: ^1.0.0
   loading_animation_widget: ^1.3.0
+  sqflite: ^2.4.1
+  path_provider: ^2.0.10
+  path_provider_android: ^2.0.6
 
 
 dev_dependencies:
@@ -67,6 +70,7 @@ dev_dependencies:
   retrofit_generator: ^9.1.5
   freezed: ^2.4.1
   logging: ^1.3.0
+  logger: ^2.5.0
 
 
 # For information on the generic Dart part of this file, see the
