--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,8 +86,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/fonts/
     - assets/translations/
     - assets/images/
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
